# fuzzer

./: CMakeLists.txt  main.c  replace.c  replace.h  replace_fuzzer_test.c
.github/workflows/: fuzzer.yml
